# stochastic-models

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICESNSE  README.md  clean.sh  install-cmake.sh  install-valgrind.sh  setup-env.sh  setup-linters.sh  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task-template.md
.github/workflows/: checks.yaml  tests.yaml  tests.yml
docs/derivations/: sde-mle-derivations.md
include/stochastic_models/distributions/: core.h  gaussian.h
include/stochastic_models/entrypoints/: general_sde.h  kca.h  kca_filter.h  optimal_trading_levels.h  ou_model.h
include/stochastic_models/exceptions/: errors.h  gsl_errors.h
include/stochastic_models/hitting_times/: hitting_time_density.h  hitting_time_ornstein_uhlenbeck.h
include/stochastic_models/interface/: stochastic_engine.h
include/stochastic_models/kalman_filter/: adapters.h  filter.h  kca.h  states.h  states_exceptions.h  type_conversion.h
include/stochastic_models/likelihood/: general_linear_likelihood.h  general_linear_online.h  likelihood.h  ornstein_uhlenbeck_likelihood.h  ornstein_uhlenbeck_online.h
include/stochastic_models/numeric_utils/: differentiation.h  helpers.h  integration.h  linalg.h  solvers.h  types.h
include/stochastic_models/sde/: general_linear.h  ornstein_uhlenbeck.h  stochastic_model.h
include/stochastic_models/trading/: exponential_mean_reversion.h  optimal_mean_reversion.h  optimal_trading.h  trading_levels.h  trading_levels_exponential.h  trading_levels_interface.h  trading_levels_params.h
lib/include/: gaussian.h  stochastic_model.h
lib/src/: gaussian.cpp  ornstein_uhlenbeck.cpp  stochastic_model.cpp
src/: CMakeLists.txt  adapters.cpp  core.cpp  differentiation.cpp  entrypoint_general_sde.cpp  entrypoint_kca_filter.cpp  entrypoint_optimal_trading_levels.cpp  entrypoint_ou_model.cpp  exponential_mean_reversion.cpp  filter.cpp  gaussian.cpp  gaussian.h  general_linear.cpp  general_linear_likelihood.cpp  general_linear_online.cpp  gsl_errors.cpp  helpers.cpp  hitting_time_density.cpp  hitting_time_ornstein_uhlenbeck.cpp  integration.cpp  interface.cpp  kca.cpp  likelihood.cpp  linalg.cpp  main.cpp  optimal_mean_reversion.cpp  ornstein_uhlenbeck.cpp  ornstein_uhlenbeck.h  ornstein_uhlenbeck_likelihood.cpp  ornstein_uhlenbeck_online.cpp  solvers.cpp  states.cpp  states_exceptions.cpp  stochastic_model.cpp  stochastic_model.h  trading_levels.cpp  trading_levels_exponential.cpp  trading_levels_params.cpp  type_conversion.cpp
stochastic_models/: CMakeLists.txt
stochastic_models/include/distributions/: core.h  gaussian.h
stochastic_models/include/hitting_times/: hitting_time_density.h
stochastic_models/include/likelihood/: likelihood.h  ornstein_uhlenbeck_likelihood.h
stochastic_models/include/numeric_utils/: helpers.h  integration.h  types.h
stochastic_models/include/sde/: ornstein_uhlenbeck.h  stochastic_model.h
stochastic_models/src/: core.cpp  gaussian.cpp  helpers.cpp  hitting_time_density.cpp  integration.cpp  likelihood.cpp  ornstein_uhlenbeck.cpp  ornstein_uhlenbeck_likelihood.cpp  stochastic_model.cpp
stochastic_models/tests/: example_test.cpp  gaussian_distribution_test.cpp  hitting_time_test.cpp  ornstein_uhlenbeck_likelihood_test.cpp  ornstein_uhlenbeck_test.cpp
tests/: CMakeLists.txt  adapters_test.cpp  exponential_mean_reversion_test.cpp  filter_states_test.cpp  filter_update_test.cpp  gaussian_distribution_test.cpp  gaussian_seeding_test.cpp  general_linear_likelihood_test.cpp  general_linear_online_test.cpp  general_linear_test.cpp  general_sde_model_test.cpp  gsl_handler_guard_test.cpp  helpers_include_hygiene_test.cpp  hitting_time_test.cpp  interface_test.cpp  kca_filter_test.cpp  optimal_mean_reversion_test.cpp  optimal_trading_levels_test.cpp  ornstein_uhlenbeck_likelihood_test.cpp  ornstein_uhlenbeck_test.cpp  ou_model_test.cpp  trading_levels_test.cpp  type_conversion_test.cpp  utils_test.cpp
